# Proxima

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  files_to_format.txt  proxima_mvp
.cache/clangd/index/: Button.cpp.0DA858A51DD131E5.idx  Button.hpp.54CCFA0397ED004B.idx  ConfigManager.cpp.ED10556BF43340ED.idx  ConfigManager.hpp.844AA626599493F4.idx  Debug.cpp.16B00ED2B8A80BC7.idx  Debug.hpp.198BC5A1ECA29F49.idx  EventDispatcher.cpp.6B91CCFB242B4118.idx  EventDispatcher.hpp.7E4DD1D756858E50.idx  IMG.c.38EDC359700018FE.idx  IMG_WIC.c.11AF9197C17F243A.idx  IMG_anim_decoder.c.72A5B9B3629C525D.idx  IMG_anim_decoder.h.5A9F90E8B878F477.idx  IMG_anim_encoder.c.2B202079548948E8.idx  IMG_anim_encoder.h.A1DB4587919C1238.idx  IMG_avif.c.BB152768CDB87C68.idx  IMG_avif.h.78B1B71C3601559D.idx  IMG_bmp.c.4D289231F781DB7A.idx  IMG_gif.c.BD290D7830A0DBBB.idx  IMG_gif.h.74540AC1C7CFA443.idx  IMG_jpg.c.1FC691FF35745931.idx  IMG_jxl.c.42681C0438EDE003.idx  IMG_lbm.c.4E7309FF6227E121.idx  IMG_libpng.c.9576859001471CCB.idx  IMG_libpng.h.F8B572CEE90F2A55.idx  IMG_pcx.c.61C8B70694055854.idx  IMG_png.c.01768A9521B96682.idx  IMG_pnm.c.37D864E06B8481CE.idx  IMG_qoi.c.576E97179AAF6CF6.idx  IMG_stb.c.648EAE79D9C1078D.idx  IMG_svg.c.382D15775153C61D.idx  IMG_tga.c.752F2BD4149DD730.idx  IMG_tif.c.576569E58F1EA18F.idx  IMG_webp.c.103419907E0AEEF2.idx  IMG_webp.h.4BC02958D174FBD5.idx  IMG_xcf.c.2322A0E295CEBFAA.idx  IMG_xpm.c.A4EFD80449AAE034.idx  IMG_xv.c.56C5A935CB8C098B.idx  Image.cpp.CD023519AFC602B1.idx  Image.hpp.239B96C3BE6F4478.idx  Line.cpp.06C0512E5CC701E6.idx  (+123 more)
docs/: Contributing.md
examples/: main.cpp
examples/config/: app_config.yaml
examples/unix/: app_config.yaml  main.cpp
examples/windows/: main.cpp
examples/windows/config/: app_config.yaml
include/: Platform.h  Platform.hpp  Proxima.hpp
include/Core/: ConfigManager.hpp  Debug.hpp  DebugManager.hpp  EventDispatcher.hpp  IEventDispatcher.hpp  IImage.hpp  IImageLoader.hpp  ProximaEvent.hpp  SDLEventDispatcher.hpp  TextRenderer.hpp  WinEventDispatcher.hpp  WinImage.hpp  WinImageLoader.hpp  WinTextRenderer.hpp
include/UI/: Button.hpp  Color.hpp  ConfigManager.hpp  GridLayout.hpp  Image.hpp  InspectorPanel.hpp  Line.hpp  Rect.hpp  Renderer.hpp  Slider.hpp  StackLayout.hpp  Text.hpp  TextInput.hpp  View.hpp  ViewContext.hpp  WIN_Renderer.hpp  W_Window.hpp  Window.hpp
scripts/: build.bat  precommit.bash
src/: Button.cpp  ConfigManager.cpp  GridLayout.cpp  Image.cpp  InspectorPanel.cpp  Line.cpp  Rect.cpp  Slider.cpp  StackLayout.cpp  Text.cpp  TextInput.cpp  View.cpp  W_Window.cpp  Window.cpp  main.c
src/Core/: Debug.cpp  DebugManager.cpp  EventDispatcher.cpp  SDL_Renderer.cpp  WIN_Renderer.cpp
